css/stylesheet.css
html,
body {
  margin: 0;
  padding: 0;
}

.container-fluid {
  background-color: #000;
}

#map {
  height: 88vh;
  z-index: 0;
  position: relative;
}

#errorGoogle {
  font-family: 'Laila', serif;
  font-weight: 600;
  font-size: 30px;
  color: #cc0000;
  text-align: center;
  position: fixed;
  top: 200;
  left: 140;
}

#h1 {
  font-family: 'Laila', serif;
  font-size: 40px;
  font-weight: 600;
  color: #fff7e6;
  text-align: center;
  margin: 30px 0 0 0;
  padding: 0;
}

/*navicon  */
#navicon {
  font-size: 1.5em;
  color: #fff;
}

.flag {
  display: inline-block;
  float: right;
  z-index: 10;
  margin-top: 5px;
}

#language {
  display: inline-block;
  float: right;
  z-index: 10;
  color: #fff;
}

.hr {
  width: 90%;
  border-color: #009933;
  margin: 0;
}

.filter-buttons {
  background-color: #009933;
  font-family: 'Laila', serif;
  color: #fff;
  display: inline-block;
  border-radius: 10px;
}

#filter-places {
  width: 90%;
  -moz-box-shadow:    1px 1px 2px 1px #ccc;
  -webkit-box-shadow: 1px 1px 2px 1px #ccc;
  box-shadow:         1px 1px 2px 1px #ccc;
  margin-top: 5px;
}
/*filter box hold text */
::placeholder {
  color: #d9d9d9;
  font-size: 1em;
}

#places-section {
  background-color: #fff7e6;
  width: 20vw;
  height: 60vh;
  z-index: 10;
  position: absolute;
  left: 15px;
  float: left;
  border: 2px solid #009933;
  overflow: scroll;
  transition: 1s;
  text-align: center;
}

/*fades text at bottom of places section*/
#fade-text {
  height: 50px;
  position: sticky;
  bottom: 0;
  left: 0;
  width: 100%;
  background-image: linear-gradient(to bottom, transparent, #fff7e6);
}

#places-list, #foursquare_list {
  list-style: none;
  width: 100%;
  padding-top: 10px;
  text-align: left;
}

#no_fs_near {
  font-family: 'Laila', serif;
  font-size: 20px;
  font-weight: 400;
  color: #009933;
  text-align: center;
  margin-top: 25px;
}

/*places list of items*/
.list-items {
  font-family: 'Laila', serif;
  font-size: 16px;
  font-weight: 400;
  color: #009933;
  margin-bottom: 5px;
}

#toggle-off-places {
  font-family: 'Laila', serif;
  color: #fff;
  font-size: 16px;
  font-weight: 400;
  width: 20vw;
  background-color: #009933;
  border: none;
  margin: 0 0 7px 0;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  border-radius: 8px;
  -webkit-box-shadow: 0 5px 0 #006622;
  -moz-box-shadow: 0 5px 0 #006622;
  box-shadow: 0 5px 0 #006622;
  /*gives button 'button' motion*/
  -webkit-transition: all .1s ease;
	-moz-transition:    all .1s ease;
	-ms-transition:     all .1s ease;
	-o-transition:      all .1s ease;
	transition:         all .1s ease;
}

/*gives toggle buttom 3d-ish look*/
#toggle-off-places:active {
  -webkit-box-shadow: 0 3px 0 #fff, 0 3px 6px #ccc;
  -moz-box-shadow:    0 3px 0 #fff, 0 3px 6px #ccc;
  box-shadow:         0 3px 0 #fff, 0 3px 6px #ccc;
  position: relative;
  top: 6px;
}

#places-details {
  font-family: 'Laila', serif;
  font-size: 1em;
  font-weight: 400;
  width: 300px;
  height: 200px;
  overflow: auto;
  text-align: center;
  color: #006622;
  margin: 0 auto 10px;
  background-color: #c6ecd9;
  border-radius: 10px;
}

 #place-name {
  background-color: #fff7e6;
  height: 30px;
  font-family: 'Laila', serif;
  font-weight: 400;
  font-size: 1.4em;
  text-align: center;
  border-bottom: 7px double #006622;
  border-radius: 10px;
  position: sticky;
  top: 0;
  z-index: 10;
}

/*in infowindow */
#website {
  color: #006622;
  font-size: 1em;
}

#pano {
  width: 150px;
  height: 150px;
  text-align: center;
  margin: 10px auto 0;
}

#fs_h2 {
  font-family: 'Laila', serif;
  font-weight: 600;
  font-size: 1.5em;
  color: #006622;
  margin: 5px 0 0 0;
  padding: 0;
}

#fs_h3 {
  font-family: 'Laila', serif;
  font-weight: 400;
  font-style: italic;
  font-size: 1em;
  color: #006622;
  margin: 0;
  padding: 0;
}

#four_sq_content {
  width: 30vw;
  max-height: 60vh;
  overflow: auto;
  z-index: 10;
  position: absolute;
  background-color: #c6ecd9;
  float: left;
  text-align: center;
}

/*fades bottom of Foursquare results */
#fade-four-sq {
  height: 100px;
  position: sticky;
  bottom: 0;
  left: 0;
  width: 100%;
  background-image: linear-gradient(to bottom, transparent, #c6ecd9);
}

.chevron {
  width: 12px;
  top: 5px;
  position: sticky;
  float: right;
  margin-right: 3px;
  z-index: 10;
}

.fs_items{
  margin-top: 5px;
  text-align: left;
  padding: 3px;
}

.h3_name {
  font-family: 'Laila', serif;
  font-weight: 600;
  font-size: 1em;
  color: #006622;
  margin: 8px 0 0 0;
  padding: 0;
}

.span_address, .span_distance {
  font-family: 'Laila', serif;
  font-weight: 400;
  font-size: 1em;
  color: #006622;
  margin: 0;
}

/*=======styles for infowindow=======*/
/*gradient to bottom of infowindow*/
.iw-bottom-gradient {
  position: sticky;
  bottom: 0;
  left: 0;
  width: 326px;
  height: 45px;
  background-image: linear-gradient(to bottom, transparent,#c6ecd9);
  background:       linear-gradient(to bottom, rgba(198, 236, 217,0) 0%, rgba(198, 236, 217, 1) 100%);
  background:       -webkit-linear-gradient(top, rgba(198, 236, 217,0) 0%, rgba(198, 236, 217, 1) 100%);
  background:       -moz-linear-gradient(top, rgba(198, 236, 217,0) 0%, rgba(198, 236, 217, 1) 100%);
  background:       -ms-linear-gradient(top, rgba(198, 236, 217,0) 0%, rgba(198, 236, 217, 1) 100%);
}

/*makes the google infowindow transparent, to allow for custom styling*/
/* white background and box outline */
.gm-style > div:first-child > div + div > div:last-child > div > div:first-child > div {
  /* we have to use !important because we are overwritng inline styles */
  background-color: transparent !important;
  box-shadow: none !important;
  width: auto !important;
  height: auto !important;
}

/* tail color */
.gm-style > div:first-child > div + div > div:last-child > div > div:first-child > div > div > div {
  background-color: #c6ecd9  !important;
}

/* close button */
.gm-style > div:first-child > div + div > div:last-child > div > div:last-child {
  margin-right: 17px !important;
  margin-top: 8px !important;
  background-color: #c6ecd9 !important;
  z-index: 5;
  opacity: 1 !important; /* by default the close button has an opacity of 0.7*/
  border: 1px solid #c6ecd9 !important;  /*increasing button border and new color*/
  border-radius: 4px !important; /* circular effect*/
  box-shadow: 0 0 5px #3990B9 !important;/* 3D effect to highlight the button*/
}

/* image icon inside close button */
.gm-style > div:first-child > div + div > div:last-child > div > div:last-child > img {
  color: #006622;
}

/*removes automatic horizontal scroll  */
.gm-style-iw div {
 overflow-x:hidden !important;
}

/* positioning of infowindow */
.gm-style-iw {
    top: 27px !important;
    left: 22px !important;

}

/*=======breakpoints for mobile==============*/
@media only screen and (max-width: 450px) {
  #places-section {
    width: 92%;
    height: 20vh;
  }

  #places-details {
    width: 225px;
  }

  #four_sq_content {
    width: 90vw;
    max-height: 30vh;
  }

  .gm-style > div:first-child > div + div > div:last-child > div > div:last-child {
    margin-right: 14px !important;
    margin-top: 5px !important;
  }
}

@media only screen and (min-width: 451px) and (max-width: 800px) {
  #toggle-off-places {
    font-size: 1em;
  }

  #places-section {
    width: 30vw;
    height: 40vh;
  }

  #four_sq_content {
    width: 35vw;
    max-height: 40vh;
  }
}

